k8s/rabbit-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-consumer
  labels:
    app: rabbitmq-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-consumer
  template:
    metadata:
      labels:
        app: rabbitmq-consumer
    spec:
      containers:
      - name: rabbit-consumer
        image: 34.118.202.127.nip.io/project2/rabbitmq-consumer:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-consumer
spec:
  selector:
    app: rabbitmq-consumer
  ports:
  - port: 80
    targetPort: 8080
