k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 34.69.223.128.nip.io
    http:
      paths:
      - path: /input
        pathType: Prefix
        backend:
          service:
            name: rust-api
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: rust-api
            port:
              number: 80
